@@ -13,7 +13,7 @@
     <dataproviderthreadcount>5</dataproviderthreadcount>
     <selenium.version>4.14.1</selenium.version>
     <logback.version>2.13.0</logback.version>
-    <surefire.maven.plugin.version>3.0.0-M4</surefire.maven.plugin.version>
+    <surefire.maven.plugin.version>2.22.2</surefire.maven.plugin.version>
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     <openhtml.version>1.0.1</openhtml.version>
     <maven.compiler.target>11</maven.compiler.target>
@@ -30,96 +30,130 @@
   <build>
     <testSourceDirectory>${project.basedir}/src/test/java</testSourceDirectory>
     <!-- https://mvnrepository.com/artifact/org.apache.maven.plugins/maven-compiler-plugin -->
-    <pluginManagement>
-      <plugins>
-        <plugin>
-          <groupId>org.apache.maven.plugins</groupId>
-          <artifactId>maven-compiler-plugin</artifactId>
-          <version>3.8.1</version>
-          <configuration>
-          </configuration>
-        </plugin>
-        <!-- https://mvnrepository.com/artifact/org.apache.maven.plugins/maven-resources-plugin -->
-        <plugin>
-          <groupId>org.apache.maven.plugins</groupId>
-          <artifactId>maven-resources-plugin</artifactId>
-          <version>3.1.0</version>
-          <configuration>
-            <encoding>${project.build.sourceEncoding}</encoding>
-          </configuration>
-        </plugin>
-        <plugin>
-          <groupId>org.sonarsource.scanner.maven</groupId>
-          <artifactId>sonar-maven-plugin</artifactId>
-          <version>3.9.1.2184</version>
-        </plugin>
-
-        <!--          <plugin>-->
-        <!--            <groupId>org.apache.maven.plugins</groupId>-->
-        <!--            <artifactId>maven-failsafe-plugin</artifactId>-->
-        <!--            <version>2.22.2</version>-->
-        <!--          </plugin>-->
-        <plugin>
-          <groupId>org.apache.maven.plugins</groupId>
-          <artifactId>maven-surefire-plugin</artifactId>
-          <version>3.0.0-M4</version>
-
-          <configuration>
-            <parallel>methods</parallel>
-            <threadCount>4</threadCount>
-            <includes>
-              <include>**/TestRunner.java</include>
-            </includes>
-          </configuration>
-
-          <dependencies>
-            <!-- https://maven.apache.org/surefire/maven-surefire-plugin/examples/junit.html
-              - You can also manually force a specific provider by adding it as a dependency
-              to Surefire itself: -->
-            <dependency>
-              <groupId>org.apache.maven.surefire</groupId>
-              <artifactId>surefire-junit47</artifactId>
-              <version>3.0.0-M4</version>
-            </dependency>
-          </dependencies>
-
-        </plugin>
-        <plugin>
-          <groupId>net.masterthought</groupId>
-          <artifactId>maven-cucumber-reporting</artifactId>
-          <version>5.0.0</version>
-          <executions>
-            <execution>
-              <id>execution</id>
-              <phase>verify</phase>
-              <goals>
-                <goal>generate</goal>
-              </goals>
-              <configuration>
-                <projectName>TestMaven</projectName>
-                <treatUndefinedAsFailed>true</treatUndefinedAsFailed>
-                <treatPendingAsFailed>true</treatPendingAsFailed>
-                <checkBuildResult>false</checkBuildResult>
-                <outputDirectory>${project.build.directory}/cucumber-report</outputDirectory>
-                <inputDirectory>${project.build.directory}/cucumber-report</inputDirectory>
-                <jsonFiles>
-                  <!-- supports wildcard or name pattern -->
-                  <param>**/*.json</param>
-                </jsonFiles>
-                <classifications>
-                  <!--suppress UnresolvedMavenProperty -->
-                  <environment>${testedEnv}</environment>
-                  <!--suppress UnresolvedMavenProperty -->
-                  <browser>${browser}</browser>
-                  <!--suppress UnresolvedMavenProperty -->
-                  <platform>${platform}</platform>
-                </classifications>
-              </configuration>
-            </execution>
-          </executions>
-        </plugin>
-      </plugins>
-    </pluginManagement>
+    <plugins>
+      <plugin>
+        <groupId>org.apache.maven.plugins</groupId>
+        <artifactId>maven-compiler-plugin</artifactId>
+        <version>3.8.1</version>
+        <configuration>
+        </configuration>
+      </plugin>
+      <!-- https://mvnrepository.com/artifact/org.apache.maven.plugins/maven-resources-plugin -->
+      <plugin>
+        <groupId>org.apache.maven.plugins</groupId>
+        <artifactId>maven-resources-plugin</artifactId>
+        <version>3.1.0</version>
+        <configuration>
+          <encoding>${project.build.sourceEncoding}</encoding>
+        </configuration>
+      </plugin>
+      <!-- https://mvnrepository.com/artifact/org.apache.maven.plugins/maven-surefire-plugin -->
+      <plugin>
+        <groupId>org.apache.maven.plugins</groupId>
+        <artifactId>maven-surefire-plugin</artifactId>
+        <version>3.0.0-M4</version>
+        <configuration>
+          <properties>
+            <property>
+              <name>dataproviderthreadcount</name>
+              <value>${dataproviderthreadcount}</value>
+            </property>
+          </properties>
+          <parallel>methods</parallel>
+          <parallel>classesAndMethods</parallel>
+          <threadCount>10</threadCount>
+          <useUnlimitedThreads>true</useUnlimitedThreads>
+          <perCoreThreadCount>false</perCoreThreadCount>
+          <testFailureIgnore>true</testFailureIgnore>
+          <trimStackTrace>false</trimStackTrace>
+        </configuration>
+      </plugin>
+      <plugin>
+        <groupId>org.sonarsource.scanner.maven</groupId>
+        <artifactId>sonar-maven-plugin</artifactId>
+        <version>3.9.1.2184</version>
+      </plugin>
+      <!-- https://mvnrepository.com/artifact/org.apache.maven.plugins/maven-failsafe-plugin -->
+      <plugin>
+        <groupId>org.apache.maven.plugins</groupId>
+        <artifactId>maven-failsafe-plugin</artifactId>
+        <version>2.22.2</version>
+        <executions>
+          <execution>
+            <goals>
+              <goal>integration-test</goal>
+              <goal>verify</goal>
+            </goals>
+            <configuration>
+              <parallel>classesAndMethods</parallel>
+              <useUnlimitedThreads>true</useUnlimitedThreads>
+              <argLine>
+                --illegal-access=permit
+              </argLine>
+            </configuration>
+          </execution>
+        </executions>
+      </plugin>
+      <!-- https://mvnrepository.com/artifact/org.apache.maven.plugins/maven-shade-plugin -->
+      <plugin>
+        <groupId>org.apache.maven.plugins</groupId>
+        <artifactId>maven-shade-plugin</artifactId>
+        <version>3.2.2</version>
+      </plugin>
+      <!-- https://mvnrepository.com/artifact/net.masterthought/maven-cucumber-reporting -->
+      <plugin>
+        <groupId>net.masterthought</groupId>
+        <artifactId>maven-cucumber-reporting</artifactId>
+        <version>5.0.0</version>
+        <executions>
+          <execution>
+            <id>execution</id>
+            <phase>verify</phase>
+            <goals>
+              <goal>generate</goal>
+            </goals>
+            <configuration>
+              <projectName>TestMaven</projectName>
+              <treatUndefinedAsFailed>true</treatUndefinedAsFailed>
+              <treatPendingAsFailed>true</treatPendingAsFailed>
+              <checkBuildResult>false</checkBuildResult>
+              <outputDirectory>${project.build.directory}/cucumber-report</outputDirectory>
+              <inputDirectory>${project.build.directory}/cucumber-report</inputDirectory>
+              <jsonFiles>
+                <!-- supports wildcard or name pattern -->
+                <param>**/*.json</param>
+              </jsonFiles>
+              <classifications>
+                <!--suppress UnresolvedMavenProperty -->
+                <environment>${testedEnv}</environment>
+                <!--suppress UnresolvedMavenProperty -->
+                <browser>${browser}</browser>
+                <!--suppress UnresolvedMavenProperty -->
+                <platform>${platform}</platform>
+              </classifications>
+            </configuration>
+          </execution>
+        </executions>
+      </plugin>
+      <plugin>
+        <groupId>org.jacoco</groupId>
+        <artifactId>jacoco-maven-plugin</artifactId>
+        <version>${jacoco.version}</version>
+        <executions>
+          <execution>
+            <id>default-prepare-agent</id>
+            <goals>
+              <goal>prepare-agent</goal>
+            </goals>
+          </execution>
+        </executions>
+      </plugin>
+    </plugins>
+    <resources>
+      <resource>
+        <directory>${basedir}/src/test/java</directory>
+      </resource>
+    </resources>
   </build>
 
   <dependencies>
@@ -232,40 +266,14 @@
       <artifactId>commons-exec</artifactId>
       <version>1.3</version>
     </dependency>
-    <!-- https://mvnrepository.com/artifact/ru.yandex.qatools.ashot/ashot -->
-    <dependency>
-      <groupId>ru.yandex.qatools.ashot</groupId>
-      <artifactId>ashot</artifactId>
-      <version>1.5.4</version>
-    </dependency>
+
     <!-- https://mvnrepository.com/artifact/com.oracle.database.jdbc/ojdbc10 -->
     <dependency>
       <groupId>com.oracle.database.jdbc</groupId>
       <artifactId>ojdbc10</artifactId>
       <version>${oracle.jdbc.version}</version>
     </dependency>
-    <dependency>
-      <groupId>com.google.cloud</groupId>
-      <artifactId>google-cloud-storage</artifactId>
-      <version>1.113.4</version>
-    </dependency>
-    <dependency>
-      <groupId>backport-util-concurrent</groupId>
-      <artifactId>backport-util-concurrent</artifactId>
-      <version>3.1</version>
-    </dependency>
-    <!-- https://mvnrepository.com/artifact/com.restfb/restfb -->
-    <dependency>
-      <groupId>com.restfb</groupId>
-      <artifactId>restfb</artifactId>
-      <version>3.19.0</version>
-    </dependency>
-    <!-- https://mvnrepository.com/artifact/org.twitter4j/twitter4j-stream -->
-    <dependency>
-      <groupId>org.twitter4j</groupId>
-      <artifactId>twitter4j-stream</artifactId>
-      <version>4.0.7</version>
-    </dependency>
+
     <dependency>
       <groupId>com.google.guava</groupId>
       <artifactId>guava</artifactId>
@@ -297,45 +305,6 @@
       <version>2.11.0</version>
     </dependency>
 
-    <!-- https://mvnrepository.com/artifact/com.mailosaur/mailosaur-java -->
-    <dependency>
-      <groupId>com.mailosaur</groupId>
-      <artifactId>mailosaur-java</artifactId>
-      <version>7.12.0</version>
-    </dependency>
-    <!-- https://mvnrepository.com/artifact/org.jsoup/jsoup -->
-    <dependency>
-      <groupId>org.jsoup</groupId>
-      <artifactId>jsoup</artifactId>
-      <version>1.16.1</version>
-    </dependency>
-    <!-- https://mvnrepository.com/artifact/org.apache.pdfbox/pdfbox -->
-    <dependency>
-      <groupId>org.apache.pdfbox</groupId>
-      <artifactId>pdfbox</artifactId>
-      <version>2.0.27</version>
-    </dependency>
-    <dependency>
-      <groupId>org.jacoco</groupId>
-      <artifactId>jacoco-maven-plugin</artifactId>
-      <version>${jacoco.version}</version>
-    </dependency>
-    <dependency>
-      <groupId>org.projectlombok</groupId>
-      <artifactId>lombok</artifactId>
-      <version>1.18.28</version>
-      <scope>provided</scope>
-    </dependency>
-    <dependency>
-      <groupId>org.postgresql</groupId>
-      <artifactId>postgresql</artifactId>
-      <version>42.6.0</version>
-    </dependency>
-    <dependency>
-      <groupId>io.github.bonigarcia</groupId>
-      <artifactId>webdrivermanager</artifactId>
-      <version>5.4.1</version>
-    </dependency>
     <dependency>
       <groupId>com.assertthat</groupId>
       <artifactId>selenium-shutterbug</artifactId>
@@ -346,6 +315,12 @@
           <artifactId>selenium-java</artifactId>
         </exclusion>
       </exclusions>
+    </dependency>
+    <!-- https://mvnrepository.com/artifact/org.twitter4j/twitter4j-stream    [JSONObject]   -->
+    <dependency>
+      <groupId>org.twitter4j</groupId>
+      <artifactId>twitter4j-stream</artifactId>
+      <version>4.0.7</version>
     </dependency>
   </dependencies>
 </project>
